# imprudence

./: .gitignore  CONTRIBUTE.txt  ChangeLog.txt  MANIFESTO.txt  README.txt  RELEASE_NOTES.txt  avatar_lad.xml  mAttachedObject.diff.txt  meerkat-llmenugl.diff.txt  meerkat-message.diff.txt  meerkat-pipeline.cpp.diff.txt  meerkat-voice.diff.txt
linden/: LICENSE-libraries-win32.txt  LICENSE-libraries.txt  install.xml
linden/LICENSES/: LICENSE-logos.txt
linden/doc/: contributions.txt
linden/etc/: message.xml
linden/indra/: CMakeLists.txt  SConstruct  create with package project.bat  develop.py  develop.py clean.bat  develop.py.bat
linden/indra/cmake/: 00-Common.cmake  APR.cmake  AddPackageTarget.cmake  Audio.cmake  BerkeleyDB.cmake  Boost.cmake  BuildVersion.cmake  CMakeLists.txt  CommonMiscLibs.cmake  CopyWinLibs.cmake  DBusGlib.cmake  DirectX.cmake  ELFIO.cmake  FMOD.cmake  FindHunSpell.cmake  FindNDOF.cmake  FindTut.cmake  GStreamer.cmake  GStreamer010Plugin.cmake  HUNSPELL.cmake  JPEG.cmake  JsonCpp.cmake  LLAudio.cmake  LLCommon.cmake  LLMedia.cmake  LLPhysics.cmake  LLWindow.cmake  LLXML.cmake  Mozlib.cmake  NDOF.cmake  OPENAL.cmake  OPENAL.cmake.imp  PNG.cmake  Python.cmake  QuickTime.cmake  QuickTimePlugin.cmake  RunBuildTest.cmake  Tut.cmake  UI.cmake  UnixInstall.cmake  (+6 more)
linden/indra/copy_win_scripts/: start-client.py
linden/indra/indra_complete/: indra_complete.sln  indra_complete_vc8.sln  indra_complete_vc9.sln
linden/indra/linux_crash_logger/: files.lst  linux_crash_logger.cpp  llcrashloggerlinux.cpp  llcrashloggerlinux.h
linden/indra/llaudio/: CMakeLists.txt  audioengine.cpp  audioengine.h  audioengine_fmod.cpp  audioengine_fmod.h  audioengine_openal.cpp  audioengine_openal.h  files.lst  listener.cpp  listener.h  listener_ds3d.h  listener_fmod.cpp  listener_fmod.h  listener_openal.cpp  listener_openal.h  llaudio.vcproj  llaudio_vc8.vcproj  llaudio_vc9.vcproj  llaudiodecodemgr.cpp  llaudiodecodemgr.h  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmod.cpp  llaudioengine_openal.cpp  llaudioengine_openal.h  llstreamingaudio.h  llvorbisdecode.cpp  llvorbisencode.cpp  llvorbisencode.h  vorbisdecode.cpp  vorbisdecode.h  vorbisencode.cpp  vorbisencode.h  windgen.h
linden/indra/llcharacter/: files.lst  llanimationstates.cpp  llanimationstates.h  llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  llcharacter.vcproj  llcharacter_vc8.vcproj  llcharacter_vc9.vcproj  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llhandmotion.h  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  lljointsolverrp3.h  lljointstate.h  llkeyframefallmotion.cpp  llkeyframefallmotion.h  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframemotionparam.cpp  llkeyframemotionparam.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llkeyframewalkmotion.h  llmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llmultigesture.h  llpose.cpp  (+7 more)
linden/indra/llcommon/: CMakeLists.txt  aiaprpool.cpp  aiaprpool.h  aithreadsafe.h  bitpack.cpp  bitpack.h  ctype_workaround.h  doublelinkedlist.h  files.lst  imageids.cpp  imageids.h  indra_constants.cpp  indra_constants.h  linden_common.h  linked_lists.h  llagentconstants.h  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llares.cpp  llares.h  llassettype.cpp  llassettype.h  llassoclist.h  llavatarconstants.h  llavatarname.cpp  llavatarname.h  llbase32.cpp  llbase32.h  llbase64.cpp  llbase64.h  llboost.h  llchat.h  llclickaction.h  llcommon.cpp  llcommon.h  llcommon.vcproj  llcommon_vc8.vcproj  llcommon_vc9.vcproj  (+150 more)
linden/indra/llcrashlogger/: files.lst  llcrashlogger.cpp  llcrashlogger.h
linden/indra/llimage/: CMakeLists.txt  (+23 more)
linden/indra/llimagej2coj/: CMakeLists.txt  files.lst  llimagej2coj.cpp  llimagej2coj.h  llimagej2coj.vcproj  llimagej2cquartz.h  llimagej2cquartz.mm
linden/indra/llmedia/: CMakeLists.txt  files.lst  llgstplaythread.cpp  llgstplaythread.h  llmedia.vcproj  llmedia_vc8.vcproj  llmedia_vc9.vcproj  llmediabase.cpp  llmediabase.h  llmediaemitter.h  llmediaemitterevents.h  llmediaengine.cpp  llmediaengine.h  llmediaimplcommon.cpp  llmediaimplcommon.h  llmediaimplexample1.cpp  llmediaimplexample1.h  llmediaimplexample2.cpp  llmediaimplexample2.h  llmediaimplfactory.cpp  llmediaimplfactory.h  llmediaimplgstreamer.cpp  llmediaimplgstreamer.h  llmediaimplgstreamer_syms.cpp  llmediaimplgstreamer_syms.h  llmediaimplgstreamer_syms_raw.inc  llmediaimplgstreamer_syms_rawa.inc  llmediaimplgstreamervidplug.cpp  llmediaimplgstreamervidplug.h  llmediaimplllmozlib.cpp  llmediaimplllmozlib.h  llmediaimplquicktime.cpp  llmediaimplquicktime.h  llmediaimplregister.h  llmediamanager.cpp  llmediamanager.h  llmediamoviebase.cpp  llmediamoviebase.h  llmediaobserver.h  llmediaobservers.h
linden/indra/media_plugins/: CMakeLists.txt
linden/indra/media_plugins/base/: CMakeLists.txt  media_plugin_base.cpp  media_plugin_base.exp  media_plugin_base.h
linden/indra/media_plugins/example/: CMakeLists.txt  media_plugin_example.cpp
linden/indra/media_plugins/gstreamer010/: CMakeLists.txt  llmediaimplgstreamer.h  llmediaimplgstreamer_syms.cpp  llmediaimplgstreamer_syms.h  llmediaimplgstreamertriviallogging.h  llmediaimplgstreamervidplug.cpp  llmediaimplgstreamervidplug.h  media_plugin_gstreamer010.cpp  media_plugin_gstreamer010.cpp~
linden/indra/media_plugins/quicktime/: CMakeLists.txt  media_plugin_quicktime.cpp
linden/indra/media_plugins/webkit/: CMakeLists.txt  dummy_volume_catcher.cpp  linux_volume_catcher.cpp  linux_volume_catcher.h  mac_volume_catcher.cpp  media_plugin_webkit.cpp  volume_catcher.h  windows_volume_catcher.cpp
linden/indra/test_apps/llplugintest/: CMakeLists.txt  demo_media_plugin.cpp  demo_media_plugin_2.cpp  demo_plugin.cpp  llmediaplugintest.cpp  media_mappings.txt  media_plugin_test.cpp  media_simple_test.cpp  plugin_host.cpp  plugin_process_launcher.cpp
linden/scripts/: build_version.py  install.py  make_changelog.py  package.py  setup-path.py  template_verifier.py  viewer_info.py
(+6751 files in other folders)
